Fix footer layout issue

--- a/app/assets/stylesheets/content.sass
+++ b/app/assets/stylesheets/content.sass
@@ -2,7 +2,7 @@
   position: fixed
   top: 50px
   right: 0
-  bottom: 40px
+  bottom: 0px
   left: 300px
   overflow: auto
 
@@ -22,7 +22,7 @@
   .content-body
     position: fixed
     top: 50 + 42px
-    bottom: 40px
+    bottom: 0px
     right: 0
     left: 300px
 
